@@ -135,6 +135,7 @@ following names for their contribution to the product.
 * svip
 * Tisane
 * Umherirrender
+* Ville Stadista
 * Zachary Hauri
 
 == Translators ==
