@@ -539,6 +539,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
 * (bug 26089) add block expiration to blockinfo
 * (bug 26125) prop=imageinfo&iiprop=size now returns the page count if the 
   file is a multi-page file
+* (bug 10268) Added linktodiffs parameter on action=feedwatchlist
 
 === Languages updated in 1.17 ===
 
